--- a/scss/memory.scss
+++ b/scss/memory.scss
@@ -51,6 +51,7 @@ body {
     text-align: center;
     position: relative;
     margin: 2vh 2vw;
+    transition: opacity 600ms 1000ms ease-in;
     filter: drop-shadow(0px 5px 6px #010101);
     
 
@@ -105,6 +106,10 @@ body {
     &:hover.hidden .back {
       box-shadow: 0 0 30px blue;
       transform: scale(1.1);
+    }
+
+    &.done {
+      opacity: 0;
     }
 
 
