--- a/css/memory.css
+++ b/css/memory.css
@@ -51,7 +51,9 @@ body {
     text-align: center;
     position: relative;
     margin: 2vh 2vw;
-    transition: opacity 600ms 1000ms ease-in;
+    transition: opacity 600ms 2s ease-in, -webkit-transform 2000ms ease;
+    transition: opacity 600ms 2s ease-in, transform 2000ms ease;
+    transition: opacity 600ms 2s ease-in, transform 2000ms ease, -webkit-transform 2000ms ease;
     -webkit-filter: drop-shadow(0px 5px 6px #010101);
             filter: drop-shadow(0px 5px 6px #010101); }
     #playfield .card .face, #playfield .card .back {
@@ -98,3 +100,89 @@ body {
               transform: scale(1.1); }
     #playfield .card.done {
       opacity: 0; }
+  #playfield.win {
+    -webkit-perspective: 0;
+            perspective: 0; }
+    #playfield.win .card {
+      transition: -webkit-transform 2000ms ease;
+      transition: transform 2000ms ease;
+      transition: transform 2000ms ease, -webkit-transform 2000ms ease;
+      opacity: 1;
+      position: fixed;
+      top: 50vh;
+      left: auto;
+      right: auto;
+      -webkit-transform-origin: bottom left;
+              transform-origin: bottom left; }
+      #playfield.win .card:nth-child(1) {
+        -webkit-transform: translateY(-100%) rotate(0deg);
+                transform: translateY(-100%) rotate(0deg); }
+      #playfield.win .card:nth-child(2) {
+        -webkit-transform: translateY(-100%) rotate(15deg);
+                transform: translateY(-100%) rotate(15deg); }
+      #playfield.win .card:nth-child(3) {
+        -webkit-transform: translateY(-100%) rotate(30deg);
+                transform: translateY(-100%) rotate(30deg); }
+      #playfield.win .card:nth-child(4) {
+        -webkit-transform: translateY(-100%) rotate(45deg);
+                transform: translateY(-100%) rotate(45deg); }
+      #playfield.win .card:nth-child(5) {
+        -webkit-transform: translateY(-100%) rotate(60deg);
+                transform: translateY(-100%) rotate(60deg); }
+      #playfield.win .card:nth-child(6) {
+        -webkit-transform: translateY(-100%) rotate(75deg);
+                transform: translateY(-100%) rotate(75deg); }
+      #playfield.win .card:nth-child(7) {
+        -webkit-transform: translateY(-100%) rotate(90deg);
+                transform: translateY(-100%) rotate(90deg); }
+      #playfield.win .card:nth-child(8) {
+        -webkit-transform: translateY(-100%) rotate(105deg);
+                transform: translateY(-100%) rotate(105deg); }
+      #playfield.win .card:nth-child(9) {
+        -webkit-transform: translateY(-100%) rotate(120deg);
+                transform: translateY(-100%) rotate(120deg); }
+      #playfield.win .card:nth-child(10) {
+        -webkit-transform: translateY(-100%) rotate(135deg);
+                transform: translateY(-100%) rotate(135deg); }
+      #playfield.win .card:nth-child(11) {
+        -webkit-transform: translateY(-100%) rotate(150deg);
+                transform: translateY(-100%) rotate(150deg); }
+      #playfield.win .card:nth-child(12) {
+        -webkit-transform: translateY(-100%) rotate(165deg);
+                transform: translateY(-100%) rotate(165deg); }
+      #playfield.win .card:nth-child(13) {
+        -webkit-transform: translateY(-100%) rotate(180deg);
+                transform: translateY(-100%) rotate(180deg); }
+      #playfield.win .card:nth-child(14) {
+        -webkit-transform: translateY(-100%) rotate(195deg);
+                transform: translateY(-100%) rotate(195deg); }
+      #playfield.win .card:nth-child(15) {
+        -webkit-transform: translateY(-100%) rotate(210deg);
+                transform: translateY(-100%) rotate(210deg); }
+      #playfield.win .card:nth-child(16) {
+        -webkit-transform: translateY(-100%) rotate(225deg);
+                transform: translateY(-100%) rotate(225deg); }
+      #playfield.win .card:nth-child(17) {
+        -webkit-transform: translateY(-100%) rotate(240deg);
+                transform: translateY(-100%) rotate(240deg); }
+      #playfield.win .card:nth-child(18) {
+        -webkit-transform: translateY(-100%) rotate(255deg);
+                transform: translateY(-100%) rotate(255deg); }
+      #playfield.win .card:nth-child(19) {
+        -webkit-transform: translateY(-100%) rotate(270deg);
+                transform: translateY(-100%) rotate(270deg); }
+      #playfield.win .card:nth-child(20) {
+        -webkit-transform: translateY(-100%) rotate(285deg);
+                transform: translateY(-100%) rotate(285deg); }
+      #playfield.win .card:nth-child(21) {
+        -webkit-transform: translateY(-100%) rotate(300deg);
+                transform: translateY(-100%) rotate(300deg); }
+      #playfield.win .card:nth-child(22) {
+        -webkit-transform: translateY(-100%) rotate(315deg);
+                transform: translateY(-100%) rotate(315deg); }
+      #playfield.win .card:nth-child(23) {
+        -webkit-transform: translateY(-100%) rotate(330deg);
+                transform: translateY(-100%) rotate(330deg); }
+      #playfield.win .card:nth-child(24) {
+        -webkit-transform: translateY(-100%) rotate(345deg);
+                transform: translateY(-100%) rotate(345deg); }
