--- a/css/memory.css
+++ b/css/memory.css
@@ -1,7 +1,9 @@
 body {
   background: green;
   background: linear-gradient(#299a0b 0%, #299a0b 100%);
-  font-family: sans-serif; }
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0; }
 
 #hud {
   position: fixed;
@@ -41,17 +43,24 @@ body {
           align-items: center;
   -webkit-perspective: 1200px;
           perspective: 1200px;
-  padding-top: 3vh;
-  margin: 0 4vh; }
+  -webkit-transform-origin: top center;
+          transform-origin: top center;
+  padding: 4vh 0 0;
+  margin: 0 auto;
+  height: 100%;
+  width: 100%;
+  max-width: 110vh; }
   #playfield *, #playfield *:before, #playfield *:after {
     box-sizing: inherit; }
   #playfield .card {
     display: inline-block;
-    width: 12%;
-    height: 18vw;
+    width: 13%;
+    height: 0;
+    padding-top: 20%;
+    max-height: 235px;
     text-align: center;
     position: relative;
-    margin: 2vh 2vw;
+    margin: 1%;
     transition: opacity 600ms 2s ease-in, -webkit-transform 2000ms ease;
     transition: opacity 600ms 2s ease-in, transform 2000ms ease;
     transition: opacity 600ms 2s ease-in, transform 2000ms ease, -webkit-transform 2000ms ease;
@@ -62,8 +71,10 @@ body {
       -webkit-backface-visibility: hidden;
               backface-visibility: hidden;
       position: absolute;
-      width: 100%;
-      height: 100%;
+      top: 0;
+      left: 0;
+      width: 95%;
+      height: 95%;
       display: block;
       transition: box-shadow 300ms ease, -webkit-transform 700ms ease;
       transition: transform 700ms ease, box-shadow 300ms ease;
@@ -75,8 +86,9 @@ body {
       border-radius: 1vw; }
     #playfield .card .face {
       font-style: normal;
-      font-size: 8vw;
-      padding-top: 33%;
+      font-size: 7vw;
+      line-height: 0;
+      padding-top: 80%;
       background: #eeeeee; }
     #playfield .card .back {
       background: orange;
