--- a/scss/memory.scss
+++ b/scss/memory.scss
@@ -4,6 +4,8 @@ body {
   background: green;
   background: linear-gradient(rgba(41,154,11,1) 0%, rgba(41,154,11,1) 100%);
   font-family: sans-serif;
+  margin: 0; 
+  padding: 0;
 }
 
 
@@ -43,17 +45,29 @@ body {
   align-content: flex-start;
   align-items: center;
   perspective: 1200px;
-  padding-top: 3vh;
-  margin: 0 4vh;
+  transform-origin: top center;
+
+  padding: 4vh 0 0;
+  margin: 0 auto;
+
+  height: 100%;
+  width: 100%;
+  max-width: 110vh;
+  
 
   .card {
+
     $basecolor: #eeeeee;
     display: inline-block;
-    width: 12%;
-    height: 18vw;
+    width: 13%;
+    height: 0;
+    padding-top: 20%;
+
+    max-height: 235px;
+
     text-align: center;
     position: relative;
-    margin: 2vh 2vw;
+    margin: 1%;
     transition: opacity 600ms 2s ease-in, transform 2000ms ease;;
     filter: drop-shadow(0px 5px 6px #010101);
     
@@ -62,8 +76,10 @@ body {
       border: 1px solid green; // Adds a nice contrast to bg
       backface-visibility: hidden;
       position: absolute;
-      width: 100%;
-      height: 100%;
+      top: 0;
+      left: 0;
+      width: 95%;
+      height: 95%;
       display: block;
       transition: transform 700ms ease, box-shadow 300ms ease;
       transform-origin: center center;
@@ -73,8 +89,9 @@ body {
     
     .face {
       font-style: normal;
-      font-size: 8vw;
-      padding-top: 33%;
+      font-size: 7vw;
+      line-height: 0;
+      padding-top: 80%;
       background: $basecolor;
     }
     .back {
